# Assignment_7_1_Final_Project

./: .dvcignore  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
notebooks/01_exploratory/: eda_exploratory_analysis.ipynb
